fixed overflow

--- a/packages/core/mashroom-portal-ui-commons/src/sass/components/_AutocompleteField.scss
+++ b/packages/core/mashroom-portal-ui-commons/src/sass/components/_AutocompleteField.scss
@@ -14,8 +14,8 @@
     .suggestions-container-open {
         display: block;
         position: absolute;
-        margin-bottom: 30px;
-        overflow: visible;
+        overflow-x: auto;
+        margin-bottom: 20px;
         max-height: 200px;
         border-bottom-left-radius: 4px;
         border-bottom-right-radius: 4px;
